# CalorieTracker

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 053a4505bb2d_extract_units_to_table.py  161f1645f125_add_profile_fields.py  1f6dfdb2d0cc_add_gi_per_100g_to_meal_plan_ingredients.py  588b69e99774_add_verification_code.py  663fa3a6501b_add_category_units_to_foods.py  8b9b5a6bb1c9_add_food_catalogue_tables.py  8fa605be32d8_add_tracking_module.py  9b0eade52e8c_add_unit_columns_to_meal_entries.py  a5d90210a60b_add_popularity_score_for_food.py  b4099227e3b5_add_oauth_account.py  b8dfc3b70ca9_add_user.py  bf4f39d54fa7_add_refresh_tokens.py  c1a2b3d4e5f6_rename_nutrition_columns.py  d2e3f4a5b6c7_add_meal_planning_tables.py  e3f4a5b6c7d8_add_pgvector_hybrid_search.py  f4a5b6c7d8e9_fix_hybrid_search_source_filter.py  g5h6i7j8k9l0_add_kunachowicz_source.py  h6i7j8k9l0m1_improve_hybrid_search_recall.py  i7j8k9l0m1n2_add_trgm_to_hybrid_search.py  j8k9l0m1n2o3_add_glycemic_index.py
backend/scripts/: assign_gi.py  fix_hybrid_search.sql  generate_embeddings.py  seed_e2e_user.py  seed_fineli.py  seed_food_db.py  seed_polish.py
backend/seeds/: fineli_converter.py  fineli_products.json  polish_products.json  staples_patch.json  translations_map.py
backend/src/: main.py
backend/src/access_control/api/: routes.py  schemas.py
backend/src/access_control/application/: manager.py
backend/src/access_control/domain/: models.py
backend/src/access_control/infrastructure/: dependencies.py  orm.py
backend/src/ai/: config.py
backend/src/ai/api/: router.py
backend/src/ai/application/: audio_service.py  dto.py  meal_service.py  ports.py  vision_service.py
backend/src/ai/domain/: exceptions.py  models.py
backend/src/core/: config.py  database.py  repository.py
backend/src/food_catalogue/: config.py
backend/src/food_catalogue/api/: dependencies.py  router.py  schemas.py
backend/src/food_catalogue/application/: gi_utils.py  ports.py  services.py
backend/src/food_catalogue/domain/: entities.py  enums.py  exceptions.py
backend/src/food_catalogue/infrastructure/: orm_models.py  repositories.py
backend/src/meal_planning/: __init__.py  config.py
backend/src/meal_planning/adapters/: __init__.py  bielik_meal_planner.py
backend/src/meal_planning/api/: __init__.py  dependencies.py  router.py  schemas.py
backend/src/meal_planning/application/: __init__.py  ports.py  service.py
backend/src/meal_planning/domain/: __init__.py  entities.py  ports.py
backend/src/meal_planning/infrastructure/: __init__.py  food_search_adapter.py  orm_models.py  repository.py
backend/src/tracking/api/: dependencies.py  router.py  schemas.py
backend/src/tracking/application/: ports.py  services.py
backend/src/tracking/domain/: entities.py  exceptions.py
backend/src/tracking/infrastructure/: orm_models.py  repositories.py
backend/src/users/api/: auth_router.py  dependencies.py  routes.py  schemas.py
backend/src/users/application/: manager.py  services.py
backend/src/users/domain/: models.py
backend/tests/: conftest.py  test_accuracy_cases.py  test_polish_diets.py
backend/tests/integration/: test_e2e_meal_plan.py  test_meal_planner_calories.py  test_meal_planner_full.py  test_meal_planner_indexed.py  test_vector_search.py
backend/tests/unit/: test_meal_parser_indexed.py  test_plan_validation.py
(+258 files in other folders)
