[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.121.3",
    "httpx-oauth>=0.16.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
